# 5580-dm-a3-association

./: .example.env  .gitignore  INVESTIGATION_SUMMARY.md  README.md  README_INVESTIGATION.md  pyproject.toml
code/: 01_connection.ipynb  02_apriori.ipynb  02_apriori_user.ipynb  03_apriori_session.ipynb  04_fpg_comparison.ipynb  05_stress_test_benchmarks.ipynb  create_fpg_comparison.py  investigation.py  join_examples.py  quick_reference.py  refine_notebook.py  relationship_analysis.py  schema_analysis.py  utils.py
report/: main.bbl-SAVE-ERROR  main.fdb_latexmk  main.fls  main.tex  references.bib
report/appendices/: appendix_a.tex  appendix_b.tex
report/chapters/: 1_introduction.tex  2_methodology.tex  3_modeling.tex  4_benchmarking.tex  5_discovery.tex  6_summary.tex
results/: apriori_session_elite_rules.csv  apriori_session_tuning_log_1.csv  apriori_session_tuning_log_2.csv  apriori_session_tuning_log_3.csv  apriori_session_tuning_log_4.csv  apriori_user_elite_rules.csv  correctness_comparison.csv  session_baskets.pkl  user_baskets.pkl
